--- a/Resources/Prototypes/Reagents/elements.yml
+++ b/Resources/Prototypes/Reagents/elements.yml
@@ -274,7 +274,7 @@
       - !type:HealthChange
         damage:
           types:
-            Cellular: 1
+            Heat: 1
 
 - type: reagent
   id: Silicon
