--- a/Resources/Prototypes/Entities/Clothing/Head/misc.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/misc.yml
@@ -47,8 +47,22 @@
     - HEAD
     - neck
   - type: Construction
-    graph: flowerwreath
-    node: flowerwreath
+    graph: flowercrown
+    node: flowercrown
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatHairflower
+  name: hairflower
+  description: A red flower for beautiful ladies.
+  components:
+  - type: Sprite
+    sprite: Clothing/Head/Misc/hairflower.rsi
+  - type: Clothing
+    sprite: Clothing/Head/Misc/hairflower.rsi
+  - type: Construction
+    graph: hairflower
+    node: hairflower
 
 - type: entity
   parent: ClothingHeadLightBase
