scoopable ash and foam, solution transfer prediction (#25832)
* move SolutionTransfer to shared and predict as much as possible

* fully move OpenableSystem to shared now that SolutionTransfer is

* fix imports for everything

* doc for solution transfer system

* trolling

* add scoopable system

* make ash and foam scoopable

* untroll

* untroll real

* make clickable it work

* troll

* the scooping room

---------

Co-authored-by: deltanedas <@deltanedas:kde.org>
Co-authored-by: metalgearsloth <comedian_vs_clown@hotmail.com>
# Conflicts:
#	Resources/Prototypes/Entities/Effects/chemistry_effects.yml

--- a/Resources/Prototypes/Entities/Effects/chemistry_effects.yml
+++ b/Resources/Prototypes/Entities/Effects/chemistry_effects.yml
@@ -91,9 +91,8 @@
     animationState: foam-dissolve
   - type: Slippery
   - type: StepTrigger
-  # disabled until foam reagent duplication is fixed
-  #- type: ScoopableSolution
-  #  solution: solutionArea
+  - type: ScoopableSolution
+    solution: solutionArea
 
 - type: entity
   id: MetalFoam
