--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -107,6 +107,8 @@
       - id: BoxEncryptionKeyPassenger
       - id: BoxEncryptionKeyService
       - id: BoxFolderClipboard
+      - id: InteractiveBoard
+      - id: InteractivePen
 
 - type: entity
   id: LockerHeadOfPersonnelFilledHardsuit
