--- a/Resources/Prototypes/_White/Entities/Objects/Misc/interactiveboard.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Misc/interactiveboard.yml
@@ -2,7 +2,7 @@
   name: interactive board
   parent: BaseItem
   id: InteractiveBoard
-  description: 'A piece of white paper.'
+  description: 'Have field for edit. Created special for burocracy!'
   components:
   - type: Sprite
     sprite: /Textures/White/Objects/Devices/interactiveboard.rsi
@@ -14,6 +14,9 @@
   - type: Item
     size: Huge
   - type: InteractiveBoard
+  - type: Tag
+    tags:
+    - InteractiveBoard
   - type: ActivatableUI
     key: enum.InteractiveBoardUiKey.Key
   - type: UserInterface
@@ -34,7 +37,7 @@
   name: interactive pen
   parent: BaseItem
   id: InteractivePen
-  description: 'A piece of white paper.'
+  description: 'Edit interactive board!'
   components:
   - type: Sprite
     sprite: /Textures/White/Objects/Devices/interactiveboard.rsi
