--- a/Resources/Prototypes/Objectives/changeling.yml
+++ b/Resources/Prototypes/Objectives/changeling.yml
@@ -17,11 +17,11 @@
   id: BaseChangelingStealObjective
   components:
     - type: StealCondition
-      verifyMapExistance: false
+      verifyMapExistence: false
     - type: Objective
       difficulty: 2.75
     - type: ObjectiveLimit
-      limit: 1
+      limit: 2
 
 - type: entity
   noSpawn: true
@@ -63,6 +63,22 @@
     - type: PickRandomChangeling
     - type: AbsorbChangelingCondition
 
+# escape
+
+- type: entity
+  noSpawn: true
+  parent: [BaseChangelingObjective, BaseLivingObjective]
+  id: EscapeShuttleObjectiveCh
+  name: Escape to centcom alive and unrestrained.
+  description: One of our undercover agents will debrief you when you arrive. Don't show up in cuffs.
+  components:
+  - type: Objective
+    difficulty: 1.3
+    icon:
+      sprite: Structures/Furniture/chairs.rsi
+      state: shuttle
+  - type: EscapeShuttleCondition
+
 - type: entity
   noSpawn: true
   parent: BaseChangelingObjective
@@ -76,6 +92,11 @@
       title: objective-condition-escape-with-identity-title
     - type: PickRandomIdentity
     - type: EscapeWithIdentityCondition
+    - type: ObjectiveBlacklistRequirement
+      blacklist:
+        components:
+        - EscapeShuttleCondition
+        - DieCondition
 
 # steal
 
@@ -225,3 +246,37 @@
     - type: StealCondition
       stealGroup: NukeDisk
       owner: objective-condition-steal-station
+
+# kill
+
+- type: entity
+  noSpawn: true
+  parent: [BaseChangelingObjective, BaseKillObjective]
+  id: KillRandomPersonObjectiveCh
+  description: Do it however you like, just make sure they don't make it to centcom.
+  components:
+  - type: Objective
+    difficulty: 1.75
+    unique: false
+  - type: TargetObjective
+    title: objective-condition-kill-person-title
+  - type: PickRandomPerson
+
+- type: entity
+  noSpawn: true
+  parent: [BaseChangelingObjective, BaseKillObjective]
+  id: KillRandomHeadObjectiveCh
+  description: We need this head gone and you probably know why. Good luck, agent.
+  components:
+  - type: Objective
+    # technically its still possible for KillRandomPersonObjective to roll a head but this is guaranteed, so higher difficulty
+    difficulty: 3.0
+    # killing 1 head is enough
+    unique: true
+  - type: TargetObjective
+    title: objective-condition-kill-head-title
+  - type: PickRandomHead
+  - type: KillPersonCondition
+    # don't count missing evac as killing as heads are higher profile, so you really need to do the dirty work
+    # if ce flies a shittle to centcom you better find a way onto it
+    requireDead: true
