- tweak: More slowdown from ling armor.

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -172,6 +172,9 @@
     - type: ExplosionResistance
       damageCoefficient: 0.5
     - type: GroupExamine
+    - type: ClothingSpeedModifier
+      walkModifier: 0.85
+      sprintModifier: 0.85
     - type: Unremoveable
       deleteOnDrop: true
     - type: ClothingModifyChemicalRegen
