- tweak: Nerf blight.

--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -1032,6 +1032,7 @@
             Heat: -0.2
             Shock: -0.2
             Cold: -0.2
+      - !type:CureBlight
       - !type:DeconvertCultist
         conditions:
           - !type:ReagentThreshold
