--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
@@ -52,6 +52,12 @@
   - type: Item
     size: Huge
     sprite: Objects/Weapons/Melee/katana.rsi
+  - type: Clothing
+    sprite: Objects/Weapons/Melee/katana.rsi
+    slots:
+    - Back
+    - Belt
+    - SuitStorage
   - type: DisarmMalus
 
 - type: entity
@@ -109,6 +115,11 @@
   - type: Item
     size: Large
     sprite: Objects/Weapons/Melee/machete.rsi
+  - type: Clothing
+    sprite: Objects/Weapons/Melee/machete.rsi
+    slots:
+    - Belt
+    - SuitStorage
   - type: DisarmMalus
   - type: Construction
     deconstructionTarget: null
@@ -139,6 +150,7 @@
     sprite: Objects/Weapons/Melee/claymore.rsi
     slots:
     - back
+    - belt
     - suitStorage
   - type: DisarmMalus
   - type: Construction
