--- a/Resources/Prototypes/_White/Aspects/Aspects.yml
+++ b/Resources/Prototypes/_White/Aspects/Aspects.yml
@@ -11,19 +11,18 @@
         path: /Audio/White/Aspects/accent.ogg
     - type: RandomAccentAspect
 
-# Disabled this cause movement speed increase isn't predicted and it feels awful due to this
-#- type: entity
-#  id: FastAndFuriousAspect
-#  parent: BaseGameRule
-#  noSpawn: true
-#  components:
-#    - type: Aspect
-#      name: "Fast and Furious"
-#      description: "Люди спешат и не важно куда."
-#      weight: 3
-#      startAudio:
-#        path: /Audio/White/Aspects/accent.ogg
-#    - type: FastAndFuriousAspect
+- type: entity
+  id: FastAndFuriousAspect
+  parent: BaseGameRule
+  noSpawn: true
+  components:
+    - type: Aspect
+      name: "Fast and Furious"
+      description: "Люди спешат и не важно куда."
+      weight: 3
+      startAudio:
+        path: /Audio/White/Aspects/accent.ogg
+    - type: FastAndFuriousAspect
 
 - type: entity
   id: RandomAppearanceAspect
