--- a/Resources/Prototypes/_White/BodyTypes/slim.yml
+++ b/Resources/Prototypes/_White/BodyTypes/slim.yml
@@ -38,6 +38,8 @@
     RLeg: MobSkrellSlimRLeg
     LFoot: MobSkrellSlimLFoot
     RFoot: MobSkrellSlimRFoot
+    HeadTop: MobHumanoidAnyMarking
+    Tail: MobHumanoidAnyMarking
 
 # - type: bodyType
 #   id: ReptilianSlim
