--- a/Resources/Prototypes/_White/Aspects/Aspects.yml
+++ b/Resources/Prototypes/_White/Aspects/Aspects.yml
@@ -321,11 +321,22 @@
       name: "Nothing"
       description: "Ничего."
       weight: 3
-      startAudio:
-        path: /Audio/White/Aspects/accent.ogg
       forbidden: true
       hidden: true
     - type: NothingAspect
+
+- type: entity
+  id: RandomItemAspect
+  parent: BaseGameRule
+  noSpawn: true
+  components:
+    - type: Aspect
+      name: "Random item"
+      description: "ЦК выдало каждому члену экипажа определённый предмет."
+      weight: 3
+      startAudio:
+        path: /Audio/White/Aspects/accent.ogg
+    - type: RandomItemAspect
 
 # Disabled this cause polymorph breaks stuff
 #- type: entity
