- add: Bring back bullet trails.

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/antimateriel.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/antimateriel.yml
@@ -1,6 +1,6 @@
 - type: entity
   noSpawn: true
-  parent: BaseBullet
+  parent: [BaseBullet, BaseBulletTrail]
   id: BulletAntiMateriel
   name: bullet (.60 anti-materiel)
   components:
