--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/heavy_rifle.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/heavy_rifle.yml
@@ -1,7 +1,7 @@
 - type: entity
   id: BulletHeavyRifle
   name: bullet (.20 rifle)
-  parent: BaseBullet
+  parent: [BaseBullet, BaseBulletTrail]
   noSpawn: true
   components:
   - type: Projectile
@@ -12,7 +12,7 @@
 - type: entity
   id: BulletMinigun
   name: minigun bullet (.10 rifle)
-  parent: BulletHeavyRifle
+  parent: [BulletHeavyRifle, BaseBulletTrail]
   noSpawn: true
   components:
   - type: Projectile
