--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/magnum.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/magnum.yml
@@ -1,7 +1,7 @@
 - type: entity
   id: BulletMagnum
   name: bullet (.45 magnum)
-  parent: BaseBullet
+  parent: [BaseBullet, BaseBulletTrail]
   noSpawn: true
   components:
   - type: Projectile
@@ -12,7 +12,7 @@
 - type: entity
   id: BulletMagnumPractice
   name: bullet (.45 magnum practice)
-  parent: BaseBulletPractice
+  parent: [BaseBulletPractice, BaseBulletTrail]
   noSpawn: true
   components:
   - type: Projectile
@@ -23,7 +23,7 @@
 - type: entity
   id: BulletMagnumRubber
   name: bullet (.45 magnum rubber)
-  parent: BaseBulletRubber
+  parent: [BaseBulletRubber, BaseBulletTrail]
   noSpawn: true
   components:
   - type: Projectile
@@ -36,7 +36,7 @@
 
 - type: entity
   id: BulletMagnumIncendiary
-  parent: BaseBulletIncendiary
+  parent: [BaseBulletIncendiary, BaseBulletTrail]
   name: bullet (.45 magnum incendiary)
   noSpawn: true
   components:
@@ -49,7 +49,7 @@
 - type: entity
   id: BulletMagnumAP
   name: bullet (.45 magnum armor-piercing)
-  parent: BaseBulletAP
+  parent: [BaseBulletAP, BaseBulletTrail]
   noSpawn: true
   components:
   - type: Projectile
@@ -61,7 +61,7 @@
 - type: entity
   id: BulletMagnumUranium
   name: bullet (.45 magnum uranium)
-  parent: BaseBulletUranium
+  parent: [BaseBulletUranium, BaseBulletTrail]
   noSpawn: true
   components:
   - type: Projectile
