--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/pistol.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/pistol.yml
@@ -1,7 +1,7 @@
 - type: entity
   id: BulletPistol
   name: bullet (.35 auto)
-  parent: BaseBullet
+  parent: [BaseBullet, BaseBulletTrail]
   noSpawn: true
   components:
   - type: Projectile
@@ -12,7 +12,7 @@
 - type: entity
   id: BulletPistolPractice
   name: bullet (.35 auto practice)
-  parent: BaseBulletPractice
+  parent: [BaseBulletPractice, BaseBulletTrail]
   noSpawn: true
   components:
   - type: Projectile
@@ -23,7 +23,7 @@
 - type: entity
   id: BulletPistolRubber
   name: bullet (.35 auto rubber)
-  parent: BaseBulletRubber
+  parent: [BaseBulletRubber, BaseBulletTrail]
   noSpawn: true
   components:
   - type: Projectile
@@ -33,7 +33,7 @@
 
 - type: entity
   id: BulletPistolIncendiary
-  parent: BaseBulletIncendiary
+  parent: [BaseBulletIncendiary, BaseBulletTrail]
   name: bullet (.35 auto incendiary)
   noSpawn: true
   components:
@@ -45,7 +45,7 @@
 
 - type: entity
   id: BulletPistolUranium
-  parent: BaseBulletUranium
+  parent: [BaseBulletUranium, BaseBulletTrail]
   name: bullet (.35 auto uranium)
   noSpawn: true
   components:
