--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/shotgun.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/shotgun.yml
@@ -2,7 +2,7 @@
   id: PelletShotgunSlug
   name: pellet (.50 slug)
   noSpawn: true
-  parent: BaseBullet
+  parent: [BaseBullet, BaseBulletTrail]
   components:
   - type: Sprite
     sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
@@ -16,7 +16,7 @@
   id: PelletShotgunBeanbag
   name: beanbag (.50)
   noSpawn: true
-  parent: BaseBullet
+  parent: [BaseBullet, BaseBulletTrail]
   components:
   - type: Sprite
     sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
@@ -33,7 +33,7 @@
   id: PelletShotgun
   name: pellet (.50)
   noSpawn: true
-  parent: BaseBullet
+  parent: [BaseBullet, BaseBulletTrail]
   components:
   - type: Sprite
     sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
@@ -47,7 +47,7 @@
   id: PelletShotgunIncendiary
   name: pellet (.50 incendiary)
   noSpawn: true
-  parent: BaseBulletIncendiary
+  parent: [BaseBulletIncendiary, BaseBulletTrail]
   components:
   - type: Sprite
     sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
@@ -64,7 +64,7 @@
   id: PelletShotgunPractice
   name: pellet (.50 practice)
   noSpawn: true
-  parent: BaseBulletPractice
+  parent: [BaseBulletPractice, BaseBulletTrail]
   components:
   - type: Sprite
     sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
@@ -78,7 +78,7 @@
   id: PelletShotgunImprovised
   name: improvised pellet
   noSpawn: true
-  parent: BaseBullet
+  parent: [BaseBullet, BaseBulletTrail]
   components:
   - type: Sprite
     sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
@@ -93,7 +93,7 @@
   id: PelletShotgunTranquilizer
   name: pellet (.50 tranquilizer)
   noSpawn: true
-  parent: BaseBulletPractice
+  parent: [BaseBulletPractice, BaseBulletTrail]
   components:
   - type: Sprite
     sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
@@ -167,7 +167,7 @@
   id: PelletShotgunUranium
   name: pellet (.50 uranium)
   noSpawn: true
-  parent: BaseBullet
+  parent: [BaseBullet, BaseBulletTrail]
   components:
   - type: Sprite
     sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
@@ -182,7 +182,7 @@
   id: PelletGrapeshot #tally fucking ho
   name: grapeshot pellet
   noSpawn: true
-  parent: BaseBullet
+  parent: [BaseBullet, BaseBulletTrail]
   components:
   - type: Sprite
     noRot: false
