--- a/Resources/Prototypes/_White/Entities/Objects/Misc/time_beacon.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Misc/time_beacon.yml
@@ -20,5 +20,6 @@
   id: TimeBeaconAnchor
   name: time beacon anchor
   description: Fuck!
+  noSpawn: true
   components:
   - type: TimeBeaconAnchor
