- tweak: More sniper ammo.

--- a/Resources/Prototypes/Catalog/Fills/Items/briefcases.yml
+++ b/Resources/Prototypes/Catalog/Fills/Items/briefcases.yml
@@ -24,7 +24,7 @@
   - type: StorageFill
     contents:
       - id: WeaponSniperHristov
-      - id: MagazineBoxAntiMateriel
+      - id: MagazineBoxAntiMaterielBig
       - id: ClothingNeckTieRed
       - id: ClothingUniformJumpsuitLawyerBlack
       - id: ClothingShoesBootsLaceup
