--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -190,7 +190,7 @@
        - CartridgeAntiMateriel
        - CartridgeCaselessRifle
        - MagazineBoxMagnumAP
-       - MagazineBoxAntiMateriel
+       - MagazineBoxAntiMaterielBig
        - MagazineBoxCaselessRifle
        - MagazineBoxPistol
        - MagazineBoxMagnum
@@ -798,7 +798,7 @@
      - CartridgeAntiMateriel
      - CartridgeCaselessRifle
      - MagazineBoxMagnumAP
-     - MagazineBoxAntiMateriel
+     - MagazineBoxAntiMaterielBig
      - MagazineBoxCaselessRifle
   - type: BluespaceStorage
 
@@ -845,7 +845,7 @@
         - CartridgeAntiMateriel
         - CartridgeCaselessRifle
         - MagazineBoxMagnumAP
-        - MagazineBoxAntiMateriel
+        - MagazineBoxAntiMaterielBig
         - MagazineBoxCaselessRifle
     - type: BluespaceStorage
 
