- tweak: Ammo counter and toggleable clothing stuff.

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/caseless_rifle.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/caseless_rifle.yml
@@ -10,6 +10,7 @@
       - CartridgeCaselessRifle
   - type: CartridgeAmmo
     deleteOnSpawn: true
+    muzzleFlash: null
   - type: Sprite
     noRot: false
     sprite: Objects/Weapons/Guns/Ammunition/Casings/ammo_casing.rsi
