--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/robotics.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/robotics.yml
@@ -16,4 +16,7 @@
     Welder: 1
     Screwdriver: 2
     Crowbar: 2
-
+  emaggedInventory:
+    SawAdvanced: 1
+    ScalpelAdvanced: 1
+    EncryptionKeyBinary: 1
