--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/scidrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/scidrobe.yml
@@ -19,5 +19,5 @@
     ClothingOuterBioScientist: 2
     ClothingHeadHatHoodBioScientist: 2
     ClothingShoesBootsWinterSci: 2
-
-
+  emaggedInventory:
+    ClothingEyesNightVisionGoggles: 1
