--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/cart.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/cart.yml
@@ -14,3 +14,6 @@
     EncryptionKeyScience: 3
     EncryptionKeySecurity: 3
     EncryptionKeyService: 3
+  emaggedInventory:
+    AgentIDCard: 1
+    EncryptionKeySyndie: 1
