add: security hud update

--- a/Resources/Prototypes/_White/StatusEffects/criminal_records.yml
+++ b/Resources/Prototypes/_White/StatusEffects/criminal_records.yml
@@ -45,3 +45,10 @@
   icon:
     sprite: /Textures/White/Interface/records.rsi
     state: incarcerated
+
+- type: statusIcon
+  parent: CriminalRecordIcon
+  id: CriminalRecordIconRemove
+  icon:
+    sprite: /Textures/White/Interface/records.rsi
+    state: incarcerated
