--- a/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
@@ -51,6 +51,17 @@
   - type: Clothing
     sprite: Clothing/Eyes/Hud/sec.rsi
   - type: ShowSecurityIcons
+  - type: SecurityHud
+    criminalrecords:
+    - CriminalRecordIconReleased
+    - CriminalRecordIconSuspected
+    - CriminalRecordIconWanted
+    - CriminalRecordIconIncarcerated
+    - CriminalRecordIconRemove
+  - type: UserInterface
+    interfaces:
+    - key: enum.SecurityHudUiKey.Key
+      type: SecurityHudBUI
   - type: Tag
     tags:
     - HudSecurity
