--- a/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
@@ -51,6 +51,8 @@
   - type: Clothing
     sprite: Clothing/Eyes/Hud/sec.rsi
   - type: ShowSecurityIcons
+  - type: AccessReader
+    access: [["Security"]]
   - type: SecurityHud
     criminalrecords:
     - CriminalRecordIconReleased
