Give botanists droppers (#26839)
Start botanists with droppers so that they can better dose robust harvest or mutagen.

(cherry picked from commit 935127f25fef5cce6e0d5c4b73db5c6077badf56)

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/nutri.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/nutri.yml
@@ -6,6 +6,7 @@
     HydroponicsToolClippers: 2
     HydroponicsToolScythe: 2
     HydroponicsToolHatchet: 2
+    Dropper: 2
     PlantBag: 2
     PlantBGoneSpray: 20
     WeedSpray: 20
