--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/airlocks.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/airlocks.yml
@@ -5,6 +5,8 @@
   components:
   - type: Sprite
     sprite: Structures/Doors/Airlocks/Standard/freezer.rsi
+  - type: Wires
+    layoutId: AirlockService
 
 - type: entity
   parent: Airlock
@@ -15,6 +17,8 @@
     sprite: Structures/Doors/Airlocks/Standard/engineering.rsi
   - type: PaintableAirlock
     department: Engineering
+  - type: Wires
+    layoutId: AirlockEngineering
 
 - type: entity
   parent: AirlockEngineering
@@ -33,6 +37,8 @@
     sprite: Structures/Doors/Airlocks/Standard/cargo.rsi
   - type: PaintableAirlock
     department: Cargo
+  - type: Wires
+    layoutId: AirlockCargo
 
 - type: entity
   parent: Airlock
@@ -43,6 +49,8 @@
     sprite: Structures/Doors/Airlocks/Standard/medical.rsi
   - type: PaintableAirlock
     department: Medical
+  - type: Wires
+    layoutId: AirlockMedical
 
 - type: entity
   parent: AirlockMedical
@@ -66,6 +74,8 @@
     sprite: Structures/Doors/Airlocks/Standard/science.rsi
   - type: PaintableAirlock
     department: Science
+  - type: Wires
+    layoutId: AirlockScience
 
 - type: entity
   parent: Airlock
@@ -78,6 +88,8 @@
     securityLevel: medSecurity
   - type: PaintableAirlock
     department: Command
+  - type: Wires
+    layoutId: AirlockCommand
 
 - type: entity
   parent: Airlock
@@ -88,6 +100,8 @@
     sprite: Structures/Doors/Airlocks/Standard/security.rsi
   - type: PaintableAirlock
     department: Security
+  - type: Wires
+    layoutId: AirlockSecurity
 
 - type: entity
   parent: Airlock
@@ -112,6 +126,8 @@
   components:
   - type: Sprite
     sprite: Structures/Doors/Airlocks/Standard/mining.rsi
+  - type: Wires
+    layoutId: AirlockCargo
 
 - type: entity
   parent: AirlockCommand # if you get centcom door somehow it counts as command, also inherit panel
@@ -149,6 +165,8 @@
     sprite: Structures/Doors/Airlocks/Glass/engineering.rsi
   - type: PaintableAirlock
     department: Engineering
+  - type: Wires
+    layoutId: AirlockEngineering
 
 - type: entity
   parent: AirlockGlass
@@ -175,6 +193,8 @@
     sprite: Structures/Doors/Airlocks/Glass/cargo.rsi
   - type: PaintableAirlock
     department: Cargo
+  - type: Wires
+    layoutId: AirlockCargo
 
 - type: entity
   parent: AirlockGlass
@@ -185,6 +205,8 @@
     sprite: Structures/Doors/Airlocks/Glass/medical.rsi
   - type: PaintableAirlock
     department: Medical
+  - type: Wires
+    layoutId: AirlockMedical
 
 - type: entity
   parent: AirlockMedicalGlass
@@ -208,6 +230,8 @@
     sprite: Structures/Doors/Airlocks/Glass/science.rsi
   - type: PaintableAirlock
     department: Science
+  - type: Wires
+    layoutId: AirlockScience
 
 - type: entity
   parent: AirlockGlass
@@ -220,6 +244,8 @@
     department: Command
   - type: WiresPanelSecurity
     securityLevel: medSecurity
+  - type: Wires
+    layoutId: AirlockCommand
 
 - type: entity
   parent: AirlockGlass
@@ -230,6 +256,8 @@
     sprite: Structures/Doors/Airlocks/Glass/security.rsi
   - type: PaintableAirlock
     department: Security
+  - type: Wires
+    layoutId: AirlockSecurity
 
 - type: entity
   parent: AirlockSecurityGlass # see standard
@@ -256,7 +284,5 @@
   components:
   - type: Sprite
     sprite: Structures/Doors/Airlocks/Glass/centcomm.rsi
-  - type: WiresPanelSecurity
-    securityLevel: medSecurity
   - type: Airlock
     openUnlitVisible: false
