Fix door electronics configurator usage (#26888)
* allow usage of network configurator for door electronics

* add checks for "allowed" items

(cherry picked from commit 2bcdb608a3ddd9c91a1169d3f0d2d5b31aaebc88)

--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -266,6 +266,7 @@
     tags:
       - Multitool
       - DroneUsable
+      - DoorElectronicsConfigurator
   - type: PhysicalComposition
     materialComposition:
       Steel: 100
@@ -319,6 +320,9 @@
     - type: ActivatableUI
       key: enum.NetworkConfiguratorUiKey.List
       inHandsOnly: true
+    - type: Tag
+      tags:
+        - DoorElectronicsConfigurator
     - type: UserInterface
       interfaces:
         - key: enum.NetworkConfiguratorUiKey.List
