--- a/Resources/Prototypes/Entities/Structures/Power/cables.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/cables.yml
@@ -52,8 +52,8 @@
     node: power
   - type: RCDDeconstructable
     cost: 2
-    delay: 2
-    fx: EffectRCDDeconstruct2  
+    delay: 0
+    fx: EffectRCDConstruct0  
 
 - type: entity
   parent: CableBase
