--- a/Resources/Prototypes/Entities/Mobs/NPCs/elemental.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/elemental.yml
@@ -231,6 +231,7 @@
   description: It consists of a liquid, and it wants to dissolve you in itself.
   components:
   - type: GhostRole
+    prob: 0
     description: ghost-role-information-angry-slimes-description
     raffle:
       settings: short
