- add: Update blood dagger.

--- a/Resources/Prototypes/_White/Catalog/uplink.yml
+++ b/Resources/Prototypes/_White/Catalog/uplink.yml
@@ -28,7 +28,7 @@
 - type: listing
   id: UplinkBloodDagger
   name: Кинжал жажды
-  description: "Критическая жажда: Кинжал Жажды обладает смертоносной точностью. Его владелец имеет 40% шанс нанести критический урон, поражая врага в его самые уязвимые места. Кровавый абсорб: При каждом успешном критическом ударе, кинжал извлекает кровь из цели, восстанавливая здоровье владельцу пропорционально количеству высосанной крови."
+  description: "Критическая жажда: Кинжал Жажды обладает смертоносной точностью. Его владелец имеет 50% шанс нанести критический урон, поражая врага в его самые уязвимые места. При ударе по себе кинжал наделит пользователя временным усилением скорости атаки и передвижения ценой обильного кровотечения. Кровавый абсорб: При каждом успешном критическом ударе, кинжал извлекает кровь из цели, восстанавливая здоровье владельцу пропорционально количеству высосанной крови."
   icon: { sprite: /Textures/Objects/Weapons/Melee/blood_dagger.rsi, state: icon }
   productEntity: BloodSuckerDagger
   cost:
